<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FlatPointFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/ubicacion_t_fp"
                    android:textSize="@dimen/title_t"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_card_bottom"
                    android:layout_marginTop="@dimen/margin_card_intern"
                    android:layout_marginHorizontal="@dimen/margin_card_intern"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        app:cardCornerRadius="@dimen/corner_r"
                        app:cardElevation="@dimen/card_e"
                        app:cardUseCompatPadding="true"
                        android:layout_margin="@dimen/margin_card">
                        android:layout_margin="@dimen/margin_card">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/ubi_n_h_fp"
                                android:textSize="@dimen/title_2_t"
                                android:textStyle="bold"
                                android:layout_marginTop="@dimen/margin_card_intern"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/ubi_d_h_fp"
                                android:textSize="@dimen/description_t"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/down_direction_mp"
                                android:textSize="@dimen/description_t"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/ubic_n_gr_fp"
                                android:textSize="@dimen/title_2_t"
                                android:textStyle="bold"
                                android:layout_marginTop="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/ubic_d_gr_fp"
                                android:textSize="@dimen/description_t"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/up_direction_mp"
                                android:textSize="@dimen/description_t"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"
                                android:layout_marginBottom="@dimen/margin_card_intern"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/infracciones_t_fp"
                    android:textSize="@dimen/title_t"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="@dimen/margin_card_intern"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        app:cardCornerRadius="@dimen/corner_r"
                        app:cardElevation="@dimen/card_e"
                        app:cardUseCompatPadding="true"
                        android:layout_margin="@dimen/margin_card">>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_c15"
                                android:textSize="@dimen/description_t"
                                android:layout_marginTop="@dimen/margin_card_intern"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_c19"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_c24"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_c27"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_c31"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_c32"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_c37"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_d04"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_d05"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/infr_d07"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_intern"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>