<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        app:cardCornerRadius="@dimen/corner_r"
                        app:cardElevation="@dimen/card_e"
                        app:cardUseCompatPadding="true"
                        android:layout_margin="@dimen/margin_card">>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/nit_t_cu"
                                android:textSize="@dimen/title_t"
                                android:textStyle="bold"
                                android:layout_marginTop="@dimen/margin_card_intern"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/nit_d_cu"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/view_height"
                                android:background="@color/black"
                                android:layout_marginHorizontal="@dimen/margin_horizontal_general"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/telefono_t_cu"
                                android:textSize="@dimen/title_t"
                                android:textStyle="bold"
                                android:layout_marginTop="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/telefono_d_cu"
                                android:textSize="@dimen/description_t"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/celular_d_cu"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/view_height"
                                android:background="@color/black"
                                android:layout_marginHorizontal="@dimen/margin_horizontal_general"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/correo_t_cu"
                                android:textSize="@dimen/title_t"
                                android:textStyle="bold"
                                android:layout_marginTop="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/correo_d_cu"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/view_height"
                                android:background="@color/black"
                                android:layout_marginHorizontal="@dimen/margin_horizontal_general"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/horario_t_cu"
                                android:textSize="@dimen/title_t"
                                android:textStyle="bold"
                                android:layout_marginTop="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/horario_1_d_cu"
                                android:textSize="@dimen/description_t"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/horario_2_d_cu"
                                android:textSize="@dimen/description_t"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/horario_3_d_cu"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/view_height"
                                android:background="@color/black"
                                android:layout_marginHorizontal="@dimen/margin_horizontal_general"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/direccion_t_cu"
                                android:textSize="@dimen/title_t"
                                android:textStyle="bold"
                                android:layout_marginTop="@dimen/margin_card_bottom"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/direccion_1_d_cu"
                                android:textSize="@dimen/description_t"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/direccion_2_d_cu"
                                android:textSize="@dimen/description_t"
                                android:layout_marginBottom="@dimen/margin_card_intern"
                                android:layout_marginHorizontal="@dimen/margin_card_intern"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>